# pyer-project

./: .gitignore  .version  pyer.bat  pyer.ps1  pyer_backend.py  pyer_config.py  pyer_gui.py  pyer_logic.py  pyproject.toml
.github/workflows/: ci.yml
src/pyer/: __init__.py  cli.py  pyer_config.py  pyer_gui.py  pyer_logic.py
tests/: conftest.py  test_backend.py  test_cli.py  test_python_version.py  test_python_version_format.py
